apps/speedtest/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`speedtest.kube.dev.cturner.xyz`)
      kind: Rule
      services:
        - name: speedtest
          port: 80
  tls: {}
